fix: align filter button to the box end

--- a/packages/pelagos/src/filters/FilterEditor.less
+++ b/packages/pelagos/src/filters/FilterEditor.less
@@ -14,6 +14,6 @@
 
 	.FilterEditor__save {
 		margin-top: @sp-12;
-		align-self: flex-start;
+		align-self: flex-end;
 	}
 }
